# LogviewerCMake

./: CMakeLists.txt  IDataObject.h  QCheckableComboBox.h  QCheckableComboBox.h.bak  QLogFileWidget.cpp  QLogFileWidget.h  QLogFileWidget.h.bak  README.md  Search.ui  logentryview.cpp  logentryview.h  logentryview.ui  logviewer.cpp  logviewer.cpp.bak  logviewer.h  logviewer.h.bak  logviewer.ui  main.cpp  main.cpp.bak  qcashfilemodel.cpp  qcashfilemodel.h  qfilelogfilemodel.cpp  qfilelogfilemodel.h  qfiletableview.cpp  qfiletableview.h  richtextdelegate.cpp  richtextdelegate.h  searchDlg.cpp  searchDlg.cpp.bak  searchDlg.h  searchDlg.ui  searchform.cpp  searchform.cpp.bak  searchform.h  searchform.ui
Logic/: cconfigsettings.cpp  cconversion.cpp  cfunctracer.cpp  clogentry.cpp  clogfile.cpp  clogfile.cpp.bak  cscopedtimer.cpp  ctracer.cpp
inc/Logic/: IDataObject.h  cconfigsettings.h  cconversion.h  cfunctracer.h  clogentry.h  clogfile.h  cscopedtimer.h  ctracer.h
